modified the files

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
     <title>Juliet.G</title>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Newsreader:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -16,17 +20,17 @@
         <nav class="navbar">
             <ul class="nav_items">
                 <li><a href="#index.html" class="nav_link">Home</a></li>
-                <li><a href="about.html" class="nav_link">About</a></li>
-                <li><a href="blogs.html" class="nav_link">Blogs</a></li>
+                <li><a href="#about.html" class="nav_link">About</a></li>
+                <li><a href="#blogs.html" class="nav_link">Blogs</a></li>
                 <li><a href="#contacts.html" class="nav_link">Contacts</a></li>
             </ul>
         </nav>
 
-        <div class="maina">
-            <div class="mained" id="home.html">
-                <h1>Hey,I'am</h1>
-                <h1>Juliet Gisemba</h1>
-                <p>Student,Tech-enthusiast,Sister</p>
+        <div class="maina"   id="index.html">
+            <div class="mained">
+                <h1 id="mainH">Hey,I'am</h1>
+                <h1 id="mainH">Juliet Gisemba</h1>
+                <p>Student,Tech-enthusiast,Reader</p>
                 <a href="about.html"><button id="welcome_btn">Welcome</button></a>
             </div>
             <div class="mainImg">
@@ -35,17 +39,158 @@
         </div>
 
 
-        <form class="form" action="">
-            <input type="text" placeholder="Name" required>
-            <input type="text" placeholder="Email" required>
-            <a href="subscribe"><button>Subscribe</button></a>
-        </form>
 
+        <div class="about" id="about.html">
+
+            <div class="word1">
+                <div class="image"></div>
+                <div class="next-word">
+                    <h4 id="quote">"LEARN THE FORMULAE AND ENJOY THE JOURNEY"</h4>
+                    <h4>What I Stand for</h4>
+                    <p><em>Humanity</em></p>
+                    <p><em>Authenticity</em></p>
+                    <p><em>Being Opinionated</em></p>
+                    <p><em>Education</em></p>
+                </div>
+
+            </div>
+
+            <div>
+                <h1>About me</h1>
+                <p>Juliet is a 21 year old from Nairobi,Kenya currently a student in Software Development in AkiraChix
+                    based Nairobi.
+                    Originally am from Kisii ,from a family of six ,one brother and two sisters and the first born
+                    daughter.
+                    Am passionate about tech and how tech has diverse and alot of opportunities to grow and model people
+                    career wise.
+                    I belive in growth and embracing learning as the joyful part of life which makes me believe I can do
+                    it as long
+                    as I can learn it,so theres nothing difficult to it.
+
+
+                <p>Have gotten an opportunity to study partly in the city and the surbubs ,am glad have tasted
+                    both of the experiences
+                    enough to tell stories.Before getting into tech my intrest was to get into the medics field and
+                    become a doctor or
+                    a nurse because I thought they looked cool in their work outfits and for-go my chance to pursue
+                    Infortation Technology at Co-operative University.I later shifted after realizing I could not
+                    sacrifice
+                    a whole career lifetime for cool outfits and thats when I realized my passion for doing tech and I
+                    followed it in 2020.
+                    Am a software developer student ,a Diploma and my dream is to take my masters at Stanford
+                    University.Am motivated to created an ecommerce application through
+                    the skills I will have received by the the end of this program but I have a website already still a
+                    working progress.
+                </p>
+            </div>
+        </div>
+
+        <div class="wrapper" id="blogs.html">
+            <div class="container">
+                <div class="bordered">
+                    <div class="book1">
+                        <img id="blog1Img" src="/images/Born a crime.jpg" alt="">
+                    </div>
+                    <div class="description1" id="descr">
+                        <p>“Abel wanted a traditional marriage with a traditional wife. For a long
+                            time I wondered why he ever married a woman like my mom in the first
+                            place, as she was the opposite of that in every way. If he wanted a
+                            woman to bow to him, there were plenty of girls back in Tzaneen being
+                            raised solely for that purpose. </p>
+
+                            <a href="book1.html"><button id="viewButton">VIEW MORE</button></a>
+                    </div>
+                </div>
+
+                <div class="bordered">
+                    <div class="book2">
+                        <img id="blog1Img" src="/images/home-going.jpg" alt="">
+                    </div>
+                    <div class="descrption" id="descr">
+                        <p>Effia is born on the night of a raging fire in Fanteland. As she grows
+                            up, her mother, Baaba, is cruel to her and abuses her, while her father,
+                            Cobbe, is kind. When Effia turns twelve, she begins to blossom into a
+                            young woman. She hopes to marry the next chief of the village, but Baaba
+                            has other plans for her. She tells Effia to hide her blood, and then</p>
+
+                            <a href="book2.html"><button id="viewButton">VIEW MORE</button></a>
+                    </div>
+                </div>
+
+                <div class="bordered">
+                    <div class="book3">
+                        <img id="blog1Img" src="/images/women_dont_ask.jpg" alt="">
+                    </div>
+                    <div class="descrption">
+                        <p>Women who run their own businesses must negotiate everything from consulting fees, to real
+                            estate
+                            contracts
+                            and rates for subcontractors, to their own benefit arrangements from insurance companies.”
+                            Women Don’t Ask, by Linda Babcock and Sara Laschever, is a widely lauded book about the
+                            personal
+                            and....
+                        </p>
+
+                        <a href="book3.html"><button id="viewButton">VIEW MORE</button></a>
+                    </div>
+
+                </div>
+
+                <div class="bordered">
+                    <div class="book4">
+                        <img id="blog1Img" src="/images/hill herper.jpg" alt="">
+                    </div>
+                    <div class="descrption">
+                        <p>"Young men today have been bombarded with images of wealth and success
+                            that tell them that buying the hottest car or the most bling-blingin’
+                            jewelry is what they should be motivated by.There is an overwhelming
+                            sales pitch targeted at these young men that subliminally suggests</p>
+
+                            <a href="book4.html"><button id="viewButton">VIEW MORE</button></a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+
+
+
+
+        <div class="footer" id="contacts.html">
+            <div class="contact">
+                <h2>Contacts</h2>
+                <a href="index.html">
+                    <p>Home</p>
+                </a>
+                <a href="about.html">
+                    <p>About me </p>
+                </a>
+                <a href="blogs.html">
+                    <p>Blogs</p>
+                </a>
+            </div>
+            <div class="form">
+                <form id="form" action="">
+                    <input type="text" placeholder="Name" required>
+                    <input type="text" placeholder="Email" required>
+                    <a href="subscribe"><button id="subscribe">Subscribe</button></a>
+
+                    <div class="icons">
+                        <i class="fab fa-github-square"><a href="https://github.com/Juliet879"
+                                id="profile-link"></a></i>
+                        <a href="https://mail.google.com/mail/u/1/#inbox"><i class="fab fa-email"></i></a>
+                        <a href="https://instagram.com/Julit879" id="profile-link"> <i class="fab fa-instagram"></i></a>
+                        <a href="linkedin.com/in/juliet-gisemba-a32903208/"><i class="fab fa-linkedin"></i></a>
+                        <h6 id="follow">Follow Me</h6>
+
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-
-
-
-
+    </div>
 
 </body>
 
