--- a/book2.html
+++ b/book2.html
@@ -17,42 +17,46 @@
 </head>
 
 <body>
-    <div class="hGoing">
-    <div class="book2">
-        <img id="blog1Img" src="/images/home-going.jpg" alt="">
-    </div>
-   <div class="descrption2" id="descr">
-    <p>Effia is born on the night of a raging fire in Fanteland. As she grows
-        up, her mother, Baaba, is cruel to her and abuses her, while her father,
-        Cobbe, is kind. When Effia turns twelve, she begins to blossom into a
-        young woman. She hopes to marry the next chief of the village, but Baaba
-        has other plans for her. She tells Effia to hide her blood, and then 
-        contrives to have her marry a British man named James Collins who is
-        the newly appointed governor of the Cape Coast Castle. Before Effia is
-        married, Baaba gives her a black stone pendant—a piece of her mother.
-        Effia and James Collins are then married and develop sincere affection
-        for each other when she moves into the Castle. However, she quickly discovers
-        that there are women in the dungeons being traded as slaves. Though she is
-        horrified, she knows she cannot go back to her village, and only returns years
-        later when she hears her father is dying. When Effia is at her father’s
-        deathbed, her brother, Fiifi, reveals that she is not actually Baaba’s daughter.
-        Her real mother, Maame, had been a house girl for Cobbe, and ran away the night
-        Effia was born. The black stone from Baaba is really from Maame.
-        Meanwhile, Esi is trapped in the women’s dungeon in the Cape Coast Castle. Soldiers
-        come and go, groping the women and taking away their children. Esi was born in
-        Asanteland to a respected warrior, Kwame Asare. The Asantes had been raiding
-        other villages for years, capturing prisoners and taking them as slaves and
-        servants. Her mother, Maame, took one of these prisoners as a house girl,
-        but the girl (Abronoma) was not very skilled at housework and was often
-        beaten. Esi felt bad for her, and agreed to send a message to her father,
-        telling him where she was. One night, Abronoma’s father and other warriors
-        attacked the village, but Maame was too afraid to run. She gave Esi a black
-        stone, and Esi ran away. She was quickly captured and taken to the Castle,
-        made to walk for days with little water and food. Back in the dungeon, a
-        soldier pulls her out and rapes her before returning her to the prison. Days
-        later, Esi and the other women are taken onto a ship, but she loses her stone
-        in the dungeon.</p>
-   </div>
+    <button id="back-btn"><a href="index.html">HOME</a></button>
+    <div class="bookBody">
+        <div class="hGoing">
+            <div class="book2">
+                <img id="blog1Img" src="/images/home-going.jpg" alt="">
+            </div>
+            <div class="descrption2" id="descr">
+                <p>Effia is born on the night of a raging fire in Fanteland. As she grows
+                    up, her mother, Baaba, is cruel to her and abuses her, while her father,
+                    Cobbe, is kind. When Effia turns twelve, she begins to blossom into a
+                    young woman. She hopes to marry the next chief of the village, but Baaba
+                    has other plans for her. She tells Effia to hide her blood, and then
+                    contrives to have her marry a British man named James Collins who is
+                    the newly appointed governor of the Cape Coast Castle. Before Effia is
+                    married, Baaba gives her a black stone pendant—a piece of her mother.
+                    Effia and James Collins are then married and develop sincere affection
+                    for each other when she moves into the Castle. However, she quickly discovers
+                    that there are women in the dungeons being traded as slaves. Though she is
+                    horrified, she knows she cannot go back to her village, and only returns years
+                    later when she hears her father is dying. When Effia is at her father’s
+                    deathbed, her brother, Fiifi, reveals that she is not actually Baaba’s daughter.
+                    Her real mother, Maame, had been a house girl for Cobbe, and ran away the night
+                    Effia was born. The black stone from Baaba is really from Maame.
+                    Meanwhile, Esi is trapped in the women’s dungeon in the Cape Coast Castle. Soldiers
+                    come and go, groping the women and taking away their children. Esi was born in
+                    Asanteland to a respected warrior, Kwame Asare. The Asantes had been raiding
+                    other villages for years, capturing prisoners and taking them as slaves and
+                    servants. Her mother, Maame, took one of these prisoners as a house girl,
+                    but the girl (Abronoma) was not very skilled at housework and was often
+                    beaten. Esi felt bad for her, and agreed to send a message to her father,
+                    telling him where she was. One night, Abronoma’s father and other warriors
+                    attacked the village, but Maame was too afraid to run. She gave Esi a black
+                    stone, and Esi ran away. She was quickly captured and taken to the Castle,
+                    made to walk for days with little water and food. Back in the dungeon, a
+                    soldier pulls her out and rapes her before returning her to the prison. Days
+                    later, Esi and the other women are taken onto a ship, but she loses her stone
+                    in the dungeon.</p>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
