--- a/book4.html
+++ b/book4.html
@@ -17,31 +17,40 @@
 </head>
 
 <body>
-
-    <div class="book4">
-        <img id="blog1Img"  src="/images/women_dont_ask.jpg" alt="">
-       </div>
-       <div class="description4">
-        <p>Women who run their own businesses must negotiate everything from consulting fees, to real estate contracts
-            and rates for subcontractors, to their own benefit arrangements from insurance companies.”
-            Women Don’t Ask, by Linda Babcock and Sara Laschever, is a widely lauded book about the personal and....
-            societal reasons some women find it hard to negotiate for more money at work and more help at home.As entrepreneurs, we’ve decided that our compensation should be determined by our ambition, skills, and
-            opportunity (hopefully), but we know it’s equally, or more critical, for us to brush up on our negotiation
-            skills to run efficient and profitable businesses.
-            The book was written in 2003, and a lot has happened since then; women have founded #MeToo and #TimesUp,
-            we’ve been part of the largest demonstration in U.S. history, and Beyoncé released Lemonade. Despite our
-            progress, some of the same issues persist. Glassdoor released a report saying that women are still
-            negotiating their starting salaries less than men. The Kennedy School at Harvard University published a
-            study that suggested that female candidates are only likely to negotiate when prompted. The study supports a
-            central tenet of the book, that men tend to recognize opportunities for negotiation in their lives more
-            often, and that women tend to believe that their circumstances are fixed.
-            We should say here that we don’t love the idea of resting the blame for the gender pay gap at women’s
-            feet–it’s likely that employer bias and the motherhood tax play a more-than-significant role–but it’s worth
-            thinking about the reasons for the discrepancies in these studies.
-            According to the author, the book was not written to shame women but is instead stacked with case studies
-            and statistics that exhibit societal norms and gender schemas that dissuade women from asking for what they
-            want.
-       </div>
-
+    <button id="back-btn"><a href="index.html">HOME</a></button>
+    <div class="bookBody">
+        <div class="book4">
+            <img id="blog1Img" src="/images/women_dont_ask.jpg" alt="">
+        </div>
+        <div class="description4">
+            <p>Women who run their own businesses must negotiate everything from consulting fees, to real estate
+                contracts
+                and rates for subcontractors, to their own benefit arrangements from insurance companies.”
+                Women Don’t Ask, by Linda Babcock and Sara Laschever, is a widely lauded book about the personal and....
+                societal reasons some women find it hard to negotiate for more money at work and more help at home.As
+                entrepreneurs, we’ve decided that our compensation should be determined by our ambition, skills, and
+                opportunity (hopefully), but we know it’s equally, or more critical, for us to brush up on our
+                negotiation
+                skills to run efficient and profitable businesses.
+                The book was written in 2003, and a lot has happened since then; women have founded #MeToo and #TimesUp,
+                we’ve been part of the largest demonstration in U.S. history, and Beyoncé released Lemonade. Despite our
+                progress, some of the same issues persist. Glassdoor released a report saying that women are still
+                negotiating their starting salaries less than men. The Kennedy School at Harvard University published a
+                study that suggested that female candidates are only likely to negotiate when prompted. The study
+                supports a
+                central tenet of the book, that men tend to recognize opportunities for negotiation in their lives more
+                often, and that women tend to believe that their circumstances are fixed.
+                We should say here that we don’t love the idea of resting the blame for the gender pay gap at women’s
+                feet–it’s likely that employer bias and the motherhood tax play a more-than-significant role–but it’s
+                worth
+                thinking about the reasons for the discrepancies in these studies.
+                According to the author, the book was not written to shame women but is instead stacked with case
+                studies
+                and statistics that exhibit societal norms and gender schemas that dissuade women from asking for what
+                they
+                want.
+        </div>
+    </div>
 </body>
+
 </html>
