--- a/book1.html
+++ b/book1.html
@@ -17,50 +17,106 @@
 </head>
 
 <body>
-    <div class="bCrime">
-        <div class="book1">
-            <img id="blog1Img" src="/images/Born a crime.jpg" alt="">
-    </div>
-    <div class="description1" id="descr">
-        <p>“Abel wanted a traditional marriage with a traditional wife. For a long
-            time I wondered why he ever married a woman like my mom in the first
-            place, as she was the opposite of that in every way. If he wanted a
-            woman to bow to him, there were plenty of girls back in Tzaneen being
-            raised solely for that purpose.The way my mother always explained it,
-            the traditional man wants a woman to be subservient, but he never falls
-            in love with subservient women. He’s attracted to independent women.
-            “He’s like an exotic bird collector,” she said. “He only wants a woman
-            who is free because his dream is to put her in a cage.”</p>
+    <button id="back-btn"><a href="index.html">HOME</a></button>
+    <div class="bookBody" id="book1">
 
-            <h2>Blog1</h2>
-            <p>From Abel's culture where men are treated with different kind of respect incluiding bowing down to them which Patricia mocked it 
-                by going down nd cower,groveling in the dirt,Abel wanted to impose ideas on what he thought his family should be.
-                Abel veined in Trevor and his mom's independence to an extent he stopped them from goind to church and to Yeoville to see Robert,Trevor's father.
-                Patricia was not into bowing down to her husband to show respect rather told him to earn it and its then he found it to be an insult abandon
-                began to get physical.I would say this is still a major issue upto date as men tend to view women to be less,because its not just Abel who lived in that belief 
-                and culture ,but also the police ,who say Its a family thing after Patricia goes to report for assault.I believe women should learn their worth and 
-                understand when to leave and that Its okay to leave.But what society does and where we women go wrong at some point,is 
-                at times  is that we tend to be hold back by what society says,that women are responsible for keeping the homes together but when the home 
-                breaks they will blame it on the women.
-            </p>
+        <div class="bCrime">
+            <div class="heading">
+                <div class="book1">
+                    <img id="blog1Img" src="/images/Born a crime.jpg" alt="">
+                </div>
+                <div class="bookTitle">
+                    <h1>Born A Crime</h1>
+                </div>
+            </div>
 
-            <h2>Blog2</h2>
-            <p>In the novel,Trevoh brings out how the use of humor has helped him make new friends and also helped get 
-                out of difficult situations.
-            </p>
-            <p>One of them he uses language as a tool when two Zulu guys tried to close speaking in Zulu<i> "Asibambe le auntie
-                yomlungu Phuma ngapha mina ndizoqhamka ngamuka kwake"</i> meaning "Lets get this guy,you go to the left and I'll cone behind you"
-            But he turned and bounced it back to them ,that they should instead just go mug someone together,as if he was part of the plan</p>
-            <p>Humor is also brought out when Trevoh and his mum Patricia were going home from church and got into a minibus where the Zulu guys 
-               in the minibus threatened that they are going to teach Trevor's mom a lesson after being in another mans car 
-               and the stereotype that Xhosa women are promiscous.Patricia throws Trevoh outside the moving minibus and She
-               rolls up Andrew on herself like a ball she also jumps .Its funny how Trevor and his mom just starts running as if nothing had just 
-               happened and the Zulu guys were suprised how a woman with small children could run so fast
-            </p>
-            <p>Another instance is when Trevor shitted in the house and threw it outside bin</p>
+            <div class="description1" id="descr">
+
+                <p>“Abel wanted a traditional marriage with a traditional wife. For a long
+                    time I wondered why he ever married a woman like my mom in the first
+                    place, as she was the opposite of that in every way. If he wanted a
+                    woman to bow to him, there were plenty of girls back in Tzaneen being
+                    raised solely for that purpose.The way my mother always explained it,
+                    the traditional man wants a woman to be subservient, but he never falls
+                    in love with subservient women. He’s attracted to independent women.
+                    “He’s like an exotic bird collector,” she said. “He only wants a woman
+                    who is free because his dream is to put her in a cage.”</p>
+
+                <div class="blog">
+                    <div class="blog1Word">
+
+                        <h2>Blog1</h2>
+                        <p>From Abel's culture where men are treated with different kind of respect incluiding bowing
+                            down to
+                            them which Patricia mocked it
+                            by going down nd cower,groveling in the dirt,Abel wanted to impose ideas on what he thought
+                            his
+                            family should be.
+                            Abel veined in Trevor and his mom's independence to an extent he stopped them from goind to
+                            church
+                            and to Yeoville to see Robert,Trevor's father.
+                            Patricia was not into bowing down to her husband to show respect rather told him to earn it
+                            and its
+                            then he found it to be an insult abandon
+                            began to get physical.I would say this is still a major issue upto date as men tend to view
+                            women to
+                            be less,because its not just Abel who lived in that belief
+                            and culture ,but also the police ,who say Its a family thing after Patricia goes to report
+                            for
+                            assault.I believe women should learn their worth and
+                            understand when to leave and that Its okay to leave.But what society does and where we women
+                            go
+                            wrong at some point,is
+                            at times is that we tend to be hold back by what society says,that women are responsible for
+                            keeping
+                            the homes together but when the home
+                            breaks they will blame it on the women.</p>
+                    </div>
+                    <div class="blogImg">
+                        <img src="/images/animatedImg.png" alt="">
+                    </div>
+                </div>
+
+                <div class="blog">
+                    <div class="blogImg">
+                        <img src="/images/youngTre.jpeg" alt="">
+                    </div>
+                    <div class="blog2Word">
+                        <h2>Blog2</h2>
+                        <p>In the novel,Trevoh brings out how the use of humor has helped him make new friends and also
+                            helped
+                            get
+                            out of difficult situations.
+                        </p>
+                        <p>One of them he uses language as a tool when two Zulu guys tried to close speaking in Zulu<i>
+                                "Asibambe le auntie
+                                yomlungu Phuma ngapha mina ndizoqhamka ngamuka kwake"</i> meaning "Lets get this guy,you
+                            go to
+                            the left and I'll cone behind you"
+                            But he turned and bounced it back to them ,that they should instead just go mug someone
+                            together,as
+                            if he was part of the plan</p>
+                        <p>Humor is also brought out when Trevoh and his mum Patricia were going home from church and
+                            got into a
+                            minibus where the Zulu guys
+                            in the minibus threatened that they are going to teach Trevor's mom a lesson after being in
+                            another
+                            mans car
+                            and the stereotype that Xhosa women are promiscous.Patricia throws Trevoh outside the moving
+                            minibus
+                            and She
+                            rolls up Andrew on herself like a ball she also jumps .Its funny how Trevor and his mom just
+                            starts
+                            running as if nothing had just
+                            happened and the Zulu guys were suprised how a woman with small children could run so fast
+                        </p>
+                        <p>Another instance is when Trevor shitted in the house and threw it outside bin</p>
+                    </div>
+                </div>
+
+            </div>
         </div>
-
     </div>
-
 </body>
+
 </html>
