--- a/book3.html
+++ b/book3.html
@@ -17,26 +17,30 @@
 </head>
 
 <body>
-    <div class="book4">
-        <img id="blog1Img"  src="/images/hill herper.jpg" alt="">
-    </div>
-    <div class="description4">
-     <p>"Young men today have been bombarded with images of wealth and success
-         that tell them that buying the hottest car or the most bling-blingin’
-         jewelry is what they should be motivated by.There is an overwhelming
-         sales pitch targeted at these young men that subliminally suggests
-         that material goods are what makes them real men. I want young men
-         to have knowledge of the things that bring them true empowerment: education,
-         a strong sense of purpose, compassion, confidence, and humility, to name a
-         few.It is no accident that I graduated from Brown University magna cum
-         laude and received graduate degrees with honors from Harvard Law School
-         and the Kennedy School of Government. My family taught me that doing my
-         best, educating myself, and being in service to others were not optional
-         and that having values and being truthful were not negotiable.I am living
-         proof that these principles work. Through the letters in this book, I wish
-         to pass on to other young men my grandfathers' legacies of education, hard
-         work, determination, and success."
-         --Excerpted from the Introduction</p>
+    <button id="back-btn"><a href="index.html">HOME</a></button>
+    <div class="bookBody">
+        <div class="book4">
+            <img id="blog1Img" src="/images/hill herper.jpg" alt="">
+        </div>
+        <div class="description4">
+            <p>"Young men today have been bombarded with images of wealth and success
+                that tell them that buying the hottest car or the most bling-blingin’
+                jewelry is what they should be motivated by.There is an overwhelming
+                sales pitch targeted at these young men that subliminally suggests
+                that material goods are what makes them real men. I want young men
+                to have knowledge of the things that bring them true empowerment: education,
+                a strong sense of purpose, compassion, confidence, and humility, to name a
+                few.It is no accident that I graduated from Brown University magna cum
+                laude and received graduate degrees with honors from Harvard Law School
+                and the Kennedy School of Government. My family taught me that doing my
+                best, educating myself, and being in service to others were not optional
+                and that having values and being truthful were not negotiable.I am living
+                proof that these principles work. Through the letters in this book, I wish
+                to pass on to other young men my grandfathers' legacies of education, hard
+                work, determination, and success."
+                --Excerpted from the Introduction</p>
+        </div>
     </div>
 </body>
+
 </html>
