--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             and....
                         </p>
 
-                        <a href="book3.html"><button id="viewButton">VIEW MORE</button></a>
+                        <a href="book4.html"><button id="viewButton">VIEW MORE</button></a>
                     </div>
 
                 </div>
@@ -146,7 +146,7 @@
                             jewelry is what they should be motivated by.There is an overwhelming
                             sales pitch targeted at these young men that subliminally suggests</p>
 
-                            <a href="book4.html"><button id="viewButton">VIEW MORE</button></a>
+                            <a href="book3.html"><button id="viewButton">VIEW MORE</button></a>
                     </div>
                 </div>
 
@@ -175,7 +175,7 @@
                 <form id="form" action="">
                     <input type="text" placeholder="Name" required>
                     <input type="text" placeholder="Email" required>
-                    <a href="subscribe"><button id="subscribe">Subscribe</button></a>
+                    <a href="subscribe"><button id="subscribe" onclick="">Subscribe</button></a>
 
                     <div class="icons">
                         <i class="fab fa-github-square"><a href="https://github.com/Juliet879"
