--- a/book1.html
+++ b/book1.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <button id="back-btn"><a href="index.html">HOME</a></button>
+    <a href="index.html"><button id="back-btn">HOME</button></a>
     <div class="bookBody" id="book1">
 
         <div class="bCrime">
@@ -45,32 +45,41 @@
                 <div class="blog">
                     <div class="blog1Word">
 
-                        <h2>Blog1</h2>
+                        <h2>Blog1  (Subservient Woman)</h2>
                         <p>From Abel's culture where men are treated with different kind of respect incluiding bowing
-                            down to
-                            them which Patricia mocked it
+                            down to them which Patricia mocked it
                             by going down nd cower,groveling in the dirt,Abel wanted to impose ideas on what he thought
-                            his
-                            family should be.
-                            Abel veined in Trevor and his mom's independence to an extent he stopped them from goind to
-                            church
-                            and to Yeoville to see Robert,Trevor's father.
-                            Patricia was not into bowing down to her husband to show respect rather told him to earn it
-                            and its
+                            hisfamily should be.
+                            Abel veined in Trevor and his mom's independence to an extent he stopped them from goind
+                            tochurch
+                            and to Yeoville to see Robert,Trevor's father.Patricia was not into bowing down to her
+                            husband to show respect rather told him to earn it and its
                             then he found it to be an insult abandon
                             began to get physical.I would say this is still a major issue upto date as men tend to view
                             women to
                             be less,because its not just Abel who lived in that belief
                             and culture ,but also the police ,who say Its a family thing after Patricia goes to report
                             for
-                            assault.I believe women should learn their worth and
+                            assault.I believe women should learn their worth ,know and 
                             understand when to leave and that Its okay to leave.But what society does and where we women
                             go
                             wrong at some point,is
                             at times is that we tend to be hold back by what society says,that women are responsible for
                             keeping
                             the homes together but when the home
-                            breaks they will blame it on the women.</p>
+                            breaks they will blame it on the women.I would say if us women empower ourselves with skills
+                            and go out there
+                            find what you can do,we won't have to be under men who disrespect us because we depend on
+                            them for everything.
+                            On Abel's case and also for the other men with the same character,women who find themselves
+                            in a relationship with them,
+                            they should take time to study them before making things official.For Patricia if only she
+                            could have gone
+                            to Abel's homeland before marriage and read the culture on how men treat their women and
+                            what she was getting herself to
+                            the fact being that Abel was so concerned about his friends and family's opinion,she would
+                            not have married Abel.
+                        </p>
                     </div>
                     <div class="blogImg">
                         <img src="/images/animatedImg.png" alt="">
@@ -82,7 +91,7 @@
                         <img src="/images/youngTre.jpeg" alt="">
                     </div>
                     <div class="blog2Word">
-                        <h2>Blog2</h2>
+                        <h2>Blog2 (Humor)</h2>
                         <p>In the novel,Trevoh brings out how the use of humor has helped him make new friends and also
                             helped
                             get
@@ -110,12 +119,26 @@
                             running as if nothing had just
                             happened and the Zulu guys were suprised how a woman with small children could run so fast
                         </p>
-                        <p>Another instance is when Trevor shitted in the house and threw it outside bin</p>
+                        <p>Back in Orlando East where Trevor's grandmother lived in a two bedroom house literally with everyone 
+                            from the family,they used to share one toilet for the adjoining houses.The tiolets were so poor that Trevor
+                            one day decide to shit on the Kitchen floor since Koko,her great grandmother could not be able to see her.
+                            When he was done,he decided to place it at the botton of the rubbish bin and when the grandmother and Patricia
+                             his mother came back and found it outside the bin after searcing,they thought someone had bewitched him.
+                             Its funny how Trevor pretends not to know anything about him and when his grandmother calls the women for
+                             prayers,Trevor makes a prayer that,that insident might be a big misunderstanding and maybe they shouldn't
+                             be quick to judge
+                        </p>
+                        <p>At school Trevor uses humor to make friends,since he could not fit in most of the gropes and cliques
+                            but only the poor black people .He finally found his niche and he learnt to move seamlessly between groups
+                            he played sports with the jocks,talk computers with the nerds.He would pop to everyone and tell jokes
+                            to them.He believed he could be part of any group that was laughing.
+                        </p>
                     </div>
                 </div>
 
             </div>
         </div>
+        <a href="https://www.penguinrandomhouse.com/books/537515/born-a-crime-by-trevor-noah/">Buy Bok</a>
     </div>
 </body>
 
