--- a/book3.html
+++ b/book3.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <button id="back-btn"><a href="index.html">HOME</a></button>
+    <a href="index.html"><button id="back-btn">HOME</button></a>
     <div class="bookBody">
         <div class="book4">
             <img id="blog1Img" src="/images/hill herper.jpg" alt="">
@@ -39,6 +39,8 @@
                 to pass on to other young men my grandfathers' legacies of education, hard
                 work, determination, and success."
                 --Excerpted from the Introduction</p>
+
+                <a href="https://www.penguinrandomhouse.com/books/298061/letters-to-a-young-brother-by-hill-harper/"><button>Buy Book</button></a>
         </div>
     </div>
 </body>
