--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                 <h1 id="mainH">Hey,I'am</h1>
                 <h1 id="mainH">Juliet Gisemba</h1>
                 <p>Student,Tech-enthusiast,Reader</p>
-                <a href="about.html"><button id="welcome_btn">Welcome</button></a>
+                <a href="#about.html"><button id="welcome_btn">Welcome</button></a>
+              
             </div>
             <div class="mainImg">
                 <img src="/images/circle-cropped.png" alt="">
@@ -43,7 +44,6 @@
         <div class="about" id="about.html">
 
             <div class="word1">
-                <div class="image"></div>
                 <div class="next-word">
                     <h4 id="quote">"LEARN THE FORMULAE AND ENJOY THE JOURNEY"</h4>
                     <h4>What I Stand for</h4>
@@ -51,6 +51,9 @@
                     <p><em>Authenticity</em></p>
                     <p><em>Being Opinionated</em></p>
                     <p><em>Education</em></p>
+                </div>
+                <div class="image">
+                    <img id="mypic" src="/images/mypic.jpg" alt="">
                 </div>
 
             </div>
@@ -68,19 +71,16 @@
                     as I can learn it,so theres nothing difficult to it.
 
 
-                <p>Have gotten an opportunity to study partly in the city and the surbubs ,am glad have tasted
+                <p>Have gotten an opportunity to study partly in the city and outside the city,am glad have tasted
                     both of the experiences
-                    enough to tell stories.Before getting into tech my intrest was to get into the medics field and
+                    enough to tell stories.Before getting into tech my interest was to get into the medics field and
                     become a doctor or
                     a nurse because I thought they looked cool in their work outfits and for-go my chance to pursue
                     Infortation Technology at Co-operative University.I later shifted after realizing I could not
                     sacrifice
                     a whole career lifetime for cool outfits and thats when I realized my passion for doing tech and I
                     followed it in 2020.
-                    Am a software developer student ,a Diploma and my dream is to take my masters at Stanford
-                    University.Am motivated to created an ecommerce application through
-                    the skills I will have received by the the end of this program but I have a website already still a
-                    working progress.
+  
                 </p>
             </div>
         </div>
@@ -91,7 +91,7 @@
                     <div class="book1">
                         <img id="blog1Img" src="/images/Born a crime.jpg" alt="">
                     </div>
-                    <div class="description1" id="descr">
+                    <div class="descrption" id="descr">
                         <p>“Abel wanted a traditional marriage with a traditional wife. For a long
                             time I wondered why he ever married a woman like my mom in the first
                             place, as she was the opposite of that in every way. If he wanted a
@@ -110,14 +110,13 @@
                         <p>Effia is born on the night of a raging fire in Fanteland. As she grows
                             up, her mother, Baaba, is cruel to her and abuses her, while her father,
                             Cobbe, is kind. When Effia turns twelve, she begins to blossom into a
-                            young woman. She hopes to marry the next chief of the village, but Baaba
-                            has other plans for her. She tells Effia to hide her blood, and then</p>
+                            young woman. She hopes to marry the next chief of the village.... </p>
 
                             <a href="book2.html"><button id="viewButton">VIEW MORE</button></a>
                     </div>
                 </div>
 
-                <div class="bordered">
+                <div class="bordered"> 
                     <div class="book3">
                         <img id="blog1Img" src="/images/women_dont_ask.jpg" alt="">
                     </div>
@@ -126,9 +125,7 @@
                             estate
                             contracts
                             and rates for subcontractors, to their own benefit arrangements from insurance companies.”
-                            Women Don’t Ask, by Linda Babcock and Sara Laschever, is a widely lauded book about the
-                            personal
-                            and....
+                            Women Don’t Ask, by Linda Babcock and Sara Laschever....
                         </p>
 
                         <a href="book4.html"><button id="viewButton">VIEW MORE</button></a>
@@ -143,8 +140,7 @@
                     <div class="descrption">
                         <p>"Young men today have been bombarded with images of wealth and success
                             that tell them that buying the hottest car or the most bling-blingin’
-                            jewelry is what they should be motivated by.There is an overwhelming
-                            sales pitch targeted at these young men that subliminally suggests</p>
+                            jewelry is what they should be motivated by....</p>
 
                             <a href="book3.html"><button id="viewButton">VIEW MORE</button></a>
                     </div>
@@ -158,18 +154,12 @@
 
 
 
-        <div class="footer" id="contacts.html">
+        <div class="mainFooter" id="contacts.html">
+            <h1 id="contactTitle">Contact me</h1>
+            <div class="footer">
             <div class="contact">
-                <h2>Contacts</h2>
-                <a href="index.html">
-                    <p>Home</p>
-                </a>
-                <a href="about.html">
-                    <p>About me </p>
-                </a>
-                <a href="blogs.html">
-                    <p>Blogs</p>
-                </a>
+                <h5>Email : gisembajuliett@gmail.com</h5>
+                <h5>Tel : 0705699879</h5>
             </div>
             <div class="form">
                 <form id="form" action="">
@@ -188,6 +178,7 @@
                     </div>
                 </form>
             </div>
+</div>
         </div>
     </div>
     </div>
