--- a/book2.html
+++ b/book2.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <button id="back-btn"><a href="index.html">HOME</a></button>
+    <a href="index.html"><button id="back-btn">HOME</button></a>
     <div class="bookBody">
         <div class="hGoing">
             <div class="book2">
