--- a/book4.html
+++ b/book4.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <button id="back-btn"><a href="index.html">HOME</a></button>
+    <a href="index.html"><button id="back-btn">HOME</button></a>
     <div class="bookBody">
         <div class="book4">
             <img id="blog1Img" src="/images/women_dont_ask.jpg" alt="">
